Обновил About.js, почистил проект от шаблонных файлов CRA

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFFFFF" />
     <link rel="stylesheet" href="" />
@@ -10,9 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="">
-		<link rel="icon" type="image/png" sizes="32x32" href="">
-		<link rel="icon" type="image/png" sizes="16x16" href="">
+
+    <!-- Favicons -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicon/favicon-safari.svg" color="#1a60cf">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/favicon-180x180.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
